Add host to liveness probe for etcd

--- a/fpm/usr/share/keights/etcd.yml.template
+++ b/fpm/usr/share/keights/etcd.yml.template
@@ -48,6 +48,7 @@ spec:
     image: {{ .EtcdImage }}
     livenessProbe:
       tcpSocket:
+        host: {{ .Prefix }}-{{ .MyIndex }}.{{ .Domain }}
         port: 2379
       initialDelaySeconds: 15
       timeoutSeconds: 15
