--- a/fpm/usr/share/keights/kube-controller-manager.yml.template
+++ b/fpm/usr/share/keights/kube-controller-manager.yml.template
@@ -14,7 +14,7 @@ spec:
   - command:
     - /usr/local/bin/kube-controller-manager
     - --cluster-name={{ .ClusterName }}
-    - --master={{ .MyIP }}:8080
+    - --master=127.0.0.1:8080
     - --cloud-provider=aws
     - --configure-cloud-routes=false
     - --address=127.0.0.1
@@ -23,6 +23,10 @@ spec:
     - --allocate-node-cidrs=true
     - --cluster-cidr={{ .PodCidr }}
     - --service-cluster-ip-range={{ .ServiceCidr }}
+    - --use-service-account-credentials=true
+    - --service-account-private-key-file=/run/kubernetes/pki/sa.key
+    - --cluster-signing-cert-file=/run/kubernetes/pki/ca.crt
+    - --cluster-signing-key-file=/run/kubernetes/pki/ca.key
     - --v=2
     image: {{ .KubeControllerManagerImage }}
     livenessProbe:
@@ -40,12 +44,30 @@ spec:
         cpu: 200m
     volumeMounts:
     - mountPath: /etc/ssl/certs
-      name: etcsslcerts
+      name: etc-ssl-certs
+      readOnly: true
+    - mountPath: /run/kubernetes/pki/ca.crt
+      name: run-kubernetes-pki-ca-crt
+      readOnly: true
+    - mountPath: /run/kubernetes/pki/ca.key
+      name: run-kubernetes-pki-ca-key
+      readOnly: true
+    - mountPath: /run/kubernetes/pki/sa.key
+      name: run-kubernetes-pki-sa-key
       readOnly: true
   hostNetwork: true
   volumes:
   - hostPath:
       path: /etc/ssl/certs
       type: DirectoryOrCreate
-    name: etcsslcerts
+    name: etc-ssl-certs
+  - hostPath:
+      path: /run/kubernetes/pki/ca.crt
+    name: run-kubernetes-pki-ca-crt
+  - hostPath:
+      path: /run/kubernetes/pki/ca.key
+    name: run-kubernetes-pki-ca-key
+  - hostPath:
+      path: /run/kubernetes/pki/sa.key
+    name: run-kubernetes-pki-sa-key
 status: {}
