Add TLS bootstrapping for kubelets
New systemd units have been added to do the initial setup for
TLS bootstrapping of kubelets.

* keights-bootstrap-token-splitter.path - Watches token file
  for existence or changes, to cause corresponding service to
  run.
* keights-bootstrap-token-splitter.service - Splits token file
  that has been retrieved from SSM parameter store into token
  ID and token secret.
* keights-manifests.target - Target to ensure manifests are
  created before starting prekubelet.
* keights-prekubelet.service - Starts kubelet once to get it to
  start k8s controller components, then stops it.
* keights-boostrap-kubeconfig.service - Creates the kubeconfig
  needed by kubelet for bootstrapping TLS.

Other updates have been made to existing services, such as the
"templatize" services, to target keights-manifests.target instead
of keights-configure.target, so they will run earlier.

Templates for controller component manifests have been updated
with new options to enable TLS bootstrapping.

--- a/fpm/usr/lib/systemd/system/keights-whisper-node.service
+++ b/fpm/usr/lib/systemd/system/keights-whisper-node.service
@@ -6,7 +6,8 @@ Type=oneshot
 # Environment=AWS_REGION=
 # Environment=KEIGHTS_CLUSTER_NAME=
 ExecStart=/usr/bin/keights whisper \
-            -p /${KEIGHTS_CLUSTER_NAME}/cluster/ca.crt:/run/kubernetes/pki/ca.crt
+            -p /${KEIGHTS_CLUSTER_NAME}/cluster/ca.crt:/run/kubernetes/pki/ca.crt \
+            -p /${KEIGHTS_CLUSTER_NAME}/cluster/bootstrap-token:/run/kubernetes/bootstrap-token
 
 [Install]
 WantedBy=keights-configure.target
