--- a/fpm/usr/lib/systemd/system/keights-bootstrap-token-splitter.service
+++ b/fpm/usr/lib/systemd/system/keights-bootstrap-token-splitter.service
@@ -7,9 +7,9 @@ Type=oneshot
 RemainAfterExit=true
 ExecStart=/bin/sh -c ' \
     while true; do \
-        cut -d . -f 1 /run/kubernetes/bootstrap-token > /run/kubernetes/bootstrap-token-id && \
+        cut -d . -f 1 /run/kubernetes/bootstrap-token | xargs echo -n > /run/kubernetes/bootstrap-token-id && \
         umask 266 && \
-        cut -d . -f 2 /run/kubernetes/bootstrap-token > /run/kubernetes/bootstrap-token-secret && \
+        cut -d . -f 2 /run/kubernetes/bootstrap-token | xargs echo -n > /run/kubernetes/bootstrap-token-secret && \
         break; \
         sleep 10; \
     done \
