Ensure token splitter runs after token is retrieved from SSM

--- a/fpm/usr/lib/systemd/system/keights-bootstrap-token-splitter.service
+++ b/fpm/usr/lib/systemd/system/keights-bootstrap-token-splitter.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=keights-bootstrap-token-splitter service
+Requires=keights-whisper-controller.service
+After=keights-whisper-controller.service
 Before=keights-bootstrap-token.service
 
 [Service]
