--- a/fpm/usr/lib/systemd/system/keights-bootstrap-token.service
+++ b/fpm/usr/lib/systemd/system/keights-bootstrap-token.service
@@ -7,16 +7,27 @@ After=keights-bootstrap-token-splitter.service keights-prekubelet.service
 Type=oneshot
 RemainAfterExit=true
 ExecStart=/bin/sh -c ' \
+    token_id=`cat /run/kubernetes/bootstrap-token-id`; \
     while true; do \
-        /usr/local/bin/kubectl -n kube-system \
-          create secret generic bootstrap-token-`cat /run/kubernetes/bootstrap-token-id` \
+        kubectl -n kube-system \
+          get secret bootstrap-token-$${token_id} >/dev/null 2>&1 || \
+        kubectl -n kube-system \
+          create secret generic bootstrap-token-$${token_id} \
           --type bootstrap.kubernetes.io/token \
           --from-literal description="cluster bootstrap token" \
           --from-literal usage-bootstrap-authentication=true \
           --from-literal usage-bootstrap-signing=true \
           --from-file token-id=/run/kubernetes/bootstrap-token-id \
           --from-file token-secret=/run/kubernetes/bootstrap-token-secret && \
-	  break; \
+        kubectl get clusterrolebinding kubeadm:kubelet-bootstrap >/dev/null 2>&1 || \
+        kubectl create clusterrolebinding kubeadm:kubelet-bootstrap \
+          --clusterrole system:node-bootstrapper \
+          --group system:bootstrappers && \
+        kubectl get clusterrolebinding kubeadm:auto-approve-bootstrap >/dev/null 2>&1 || \
+        kubectl create clusterrolebinding kubeadm:auto-approve-bootstrap \
+          --clusterrole system:certificates.k8s.io:certificatesigningrequests:nodeclient \
+          --group system:bootstrappers && \
+        break; \
         sleep 10; \
     done \
 '
