Remove variables to be set in systemd drop-ins

--- a/fpm/usr/lib/systemd/system/keights-bootstrap-kubeconfig.service
+++ b/fpm/usr/lib/systemd/system/keights-bootstrap-kubeconfig.service
@@ -6,8 +6,8 @@ After=keights-bootstrap-token-splitter.service
 [Service]
 Type=oneshot
 RemainAfterExit=true
-Environment=KEIGHTS_CLUSTER_NAME=k8s-jw1
-Environment=KEIGHTS_DOMAIN=k8s.local
+# Environment=KEIGHTS_CLUSTER_NAME=
+# Environment=KEIGHTS_DOMAIN=
 ExecStart=/bin/sh -e -c ' \
     kubeconfig=/run/kubernetes/bootstrap.kubeconfig; \
     user=kubelet-bootstrap; \
