Use existing variables for kubeconfig and user values

--- a/fpm/usr/lib/systemd/system/keights-bootstrap-kubeconfig.service
+++ b/fpm/usr/lib/systemd/system/keights-bootstrap-kubeconfig.service
@@ -21,9 +21,9 @@ ExecStart=/bin/sh -e -c ' \
       --kubeconfig=$${kubeconfig}; \
     kubectl config use-context $${user}@${KEIGHTS_CLUSTER_NAME} \
       --kubeconfig=$${kubeconfig}; \
-    kubectl config set-credentials kubelet-bootstrap \
+    kubectl config set-credentials $${user} \
       --token=`cat /run/kubernetes/bootstrap-token-secret` \
-      --kubeconfig=/etc/kubernetes/bootstrap.kubeconfig \
+      --kubeconfig=$${kubeconfig} \
 '
 
 [Install]
