Change to connecting to master on localhost
The exposed IP endpoint is now SSL, and the HTTP endpoint only
listens on localhost. Until all components are using SSL, change
to connect to the master on localhost using HTTP.

--- a/fpm/usr/share/keights/kube-scheduler.yml.template
+++ b/fpm/usr/share/keights/kube-scheduler.yml.template
@@ -14,7 +14,7 @@ spec:
   - command:
     - kube-scheduler
     - --address=127.0.0.1
-    - --master={{ .MyIP }}:8080
+    - --master=127.0.0.1:8080
     - --leader-elect=true
     - --v=2
     image: {{ .KubeSchedulerImage }}
