Remove while loop checking for path
The corresponding path unit should ensure path exists before the
service is started.

--- a/fpm/usr/lib/systemd/system/keights-bootstrap-token-splitter.service
+++ b/fpm/usr/lib/systemd/system/keights-bootstrap-token-splitter.service
@@ -6,13 +6,9 @@ Before=keights-bootstrap-token.service
 Type=oneshot
 RemainAfterExit=true
 ExecStart=/bin/sh -c ' \
-    while true; do \
-        cut -d . -f 1 /run/kubernetes/bootstrap-token | xargs echo -n > /run/kubernetes/bootstrap-token-id && \
-        umask 266 && \
-        cut -d . -f 2 /run/kubernetes/bootstrap-token | xargs echo -n > /run/kubernetes/bootstrap-token-secret && \
-        break; \
-        sleep 10; \
-    done \
+    cut -d . -f 1 /run/kubernetes/bootstrap-token | xargs echo -n > /run/kubernetes/bootstrap-token-id && \
+    umask 266 && \
+    cut -d . -f 2 /run/kubernetes/bootstrap-token | xargs echo -n > /run/kubernetes/bootstrap-token-secret \
 '
 
 [Install]
