--- a/fpm/usr/lib/systemd/system/keights-whisper-node.service
+++ b/fpm/usr/lib/systemd/system/keights-whisper-node.service
@@ -7,6 +7,7 @@ Type=oneshot
 # Environment=KEIGHTS_CLUSTER_NAME=
 ExecStart=/usr/bin/keights whisper \
             -p /${KEIGHTS_CLUSTER_NAME}/cluster/ca.crt:/run/kubernetes/pki/ca.crt \
+            -p /${KEIGHTS_CLUSTER_NAME}/cluster/kube-router.crt:/run/kubernetes/pki/kube-router.crt \
             -p /${KEIGHTS_CLUSTER_NAME}/cluster/bootstrap-token:/run/kubernetes/bootstrap-token
 
 [Install]
