Add file lock between services running kubectl to prevent conflicts

--- a/fpm/usr/lib/systemd/system/keights-bootstrap-kubeconfig.service
+++ b/fpm/usr/lib/systemd/system/keights-bootstrap-kubeconfig.service
@@ -5,7 +5,7 @@ Description=keights-bootstrap-kubeconfig service
 Type=oneshot
 # Environment=KEIGHTS_CLUSTER_NAME=
 # Environment=KEIGHTS_DOMAIN=
-ExecStart=/bin/sh -e -c ' \
+ExecStart=/usr/bin/flock /run/kubernetes/.kubectl.lock -c ' \
     kubeconfig=/run/kubernetes/bootstrap.kubeconfig; \
     user=kubelet-bootstrap; \
     kubectl config set-cluster ${KEIGHTS_CLUSTER_NAME} \
