--- a/fpm/usr/lib/systemd/system/keights-kubectl-create.service
+++ b/fpm/usr/lib/systemd/system/keights-kubectl-create.service
@@ -5,7 +5,7 @@ After=keights-configure.target
 
 [Service]
 Type=oneshot
-ExecStart=/bin/sh -e -c ' \
+ExecStart=/usr/bin/flock /run/kubernetes/.kubectl.lock -c ' \
     myip=`curl http://169.254.169.254/latest/meta-data/local-ipv4`; \
     for entry in `cat /run/keights-collector/asg`; do \
         index=`echo $${entry} | cut -d : -f 1`; \
