--- a/fpm/usr/lib/systemd/system/kube-router-kubeconfig.service
+++ b/fpm/usr/lib/systemd/system/kube-router-kubeconfig.service
@@ -5,7 +5,7 @@ Description=kube-router-kubeconfig service
 Type=oneshot
 # Environment=KEIGHTS_CLUSTER_NAME=
 # Environment=KEIGHTS_DOMAIN=
-ExecStart=/bin/sh -e -c ' \
+ExecStart=/usr/bin/flock /run/kubernetes/.kubectl.lock -c ' \
     kubeconfig=/var/lib/kube-router/kubeconfig; \
     user=kube-router; \
     kubectl config set-cluster ${KEIGHTS_CLUSTER_NAME} \
