--- a/fpm/usr/lib/systemd/system/keights-kubectl-create.service
+++ b/fpm/usr/lib/systemd/system/keights-kubectl-create.service
@@ -6,7 +6,7 @@ After=keights-prekubelet.service
 [Service]
 Type=oneshot
 ExecStart=/usr/bin/flock /run/kubernetes/.kubectl.lock -c ' \
-    myip=`curl http://169.254.169.254/latest/meta-data/local-ipv4`; \
+    myip=`curl -s http://169.254.169.254/latest/meta-data/local-ipv4`; \
     for entry in `cat /run/keights-collector/asg`; do \
         index=`echo $${entry} | cut -d : -f 1`; \
         ip=`echo $${entry} | cut -d : -f 2`; \
