Add root CA file, needed for ServiceAccount

--- a/fpm/usr/share/keights/kube-controller-manager.yml.template
+++ b/fpm/usr/share/keights/kube-controller-manager.yml.template
@@ -27,6 +27,7 @@ spec:
     - --service-account-private-key-file=/run/kubernetes/pki/sa.key
     - --cluster-signing-cert-file=/run/kubernetes/pki/ca.crt
     - --cluster-signing-key-file=/run/kubernetes/pki/ca.key
+    - --root-ca-file=/run/kubernetes/pki/ca.crt
     - --v=2
     image: {{ .KubeControllerManagerImage }}
     livenessProbe:
